minor api bug fix
